crates/reinhardt-urls/crates/routers-macros/tests/ui/unmatched_open_brace.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: unmatched opening brace '{'
	let _path = path!("/users/{id/");
}
